# autodocs

./: .env.example  README.md  info.txt  pyproject.toml  pytest.toml
src/autodocs/: __init__.py  agent.py  parsers.py  tools.py
src/autodocs/parsers/: typescript.py
tests/simple_python_example/: example.py  test_python_example.py
tests/simple_python_library/: lib.py
tests/simple_python_module/: test_python_module.py
tests/simple_typescript_example/: example.ts  runner.py
